# cube-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PYTHON_SETUP.md  README.md  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml  release.yml
src/mcp_cube_server/: __init__.py  server.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_server_integration.py
tests/unit/: __init__.py  test_cube_client.py  test_models.py  test_server.py
